<resources>
    <string name="app_name">My Application</string>
    <string name="producto">Producto</string>
    <string name="precio">Precio</string>
    <string name="fabricante">Fabricante</string>
    <string name="a_adir">Añadir</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="codigo">Codigo</string>
</resources>