<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtCodigo"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codigo" />

    <EditText
        android:id="@+id/edtProducto"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/producto" />

    <EditText
        android:id="@+id/edtPrecio"
        android:height="48dp"
        android:textSize="30sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio" />

    <EditText
        android:id="@+id/edtFabricante"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fabricante" />

    <Button
        android:id="@+id/btnAgregar"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_adir" />

    <Button
        android:id="@+id/btnBuscar"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar" />

    <Button
        android:id="@+id/btnActualizar"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar" />

    <Button
        android:id="@+id/btnEliminar"
        android:height="48dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar" />

</LinearLayout>